--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="author" content="mumthaz">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>Mumthaz website </title>
+<title>Neyyaattinkara gopan website </title>
 <!--
 Stimulus Template
 http://www.templatemo.com/tm-498-stimulus
@@ -60,7 +60,7 @@ http://www.templatemo.com/tm-498-stimulus
           </div>
 
      </div>
-</div>ruzivoedu.clt@gmail.com
+</div>neyyattinkaragopan@gmai.com
 
 
 <!-- Home Section -->
@@ -77,8 +77,8 @@ http://www.templatemo.com/tm-498-stimulus
                     <div class="home-thumb">
                          <div class="section-title">
                               <h4 class="wow fadeInUp" data-wow-delay="0.3s">welcome to my website</h4>
-                              <h1 class="wow fadeInUp" data-wow-delay="0.6s">Hello, I am <strong>Mumthaz</strong> currently based in Mukkum city.</h1>
-                              <p class="wow fadeInUp" data-wow-delay="0.9s">Iam studying in Calicut university as computer science PG  Student.
+                              <h1 class="wow fadeInUp" data-wow-delay="0.6s">Hello, I am <strong>neyyattinkara gopan</strong> currently based in Neyyattinkara city.</h1>
+                              <p class="wow fadeInUp" data-wow-delay="0.9s">Iam army officer.
 
 </p>
                               
@@ -107,7 +107,7 @@ http://www.templatemo.com/tm-498-stimulus
                               <p class="color-yellow">Sed vulputate vitae diam quis bibendum</p>
                          </div>
                          <div class="wow fadeInUp" data-wow-delay="0.8s">
-                              <p>Iam 12 years old. iam staying with my parents. I like to draw and to play badminton. </p>
+                              <p>Iam 48 years old. iam staying in army camp kashmir. I like to draw and to play badminton. </p>
                               <p>I also like skating</p>
                          </div>
                     </div>
