--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ http://www.templatemo.com/tm-498-stimulus
                               <p class="color-yellow">Sed vulputate vitae diam quis bibendum</p>
                          </div>
                          <div class="wow fadeInUp" data-wow-delay="0.8s">
-                              <p>Iam 48 years old. iam staying in army camp kashmir. I like to draw and to play badminton. </p>
-                              <p>I also like skating</p>
+                              <p>Iam 48 years old. iam staying in army camp kashmir. I like to drive. </p>
+                              <p>I also like killing terrorist</p>
                          </div>
                     </div>
                </div>
@@ -162,7 +162,7 @@ http://www.templatemo.com/tm-498-stimulus
                     <div class="wow fadeInUp color-white service-thumb" data-wow-delay="0.8s">
                          <i class="fa fa-desktop"></i>
                               <h3>painting</h3>
-                              <p class="color-white">I like painting and pencil sketching</p>
+                              <p class="color-white">I like shooting and killing terrorist</p>
                     </div>
                </div>
 
@@ -170,7 +170,7 @@ http://www.templatemo.com/tm-498-stimulus
                     <div class="wow fadeInUp color-white service-thumb" data-wow-delay="1.2s">
                          <i class="fa fa-paper-plane"></i>
                               <h3>badminton</h3>
-                              <p class="color-white">I like playing badminton with my friends .</p>
+                              <p class="color-white">I like to go to my birthplace.</p>
                     </div>
                </div>
 
@@ -178,7 +178,7 @@ http://www.templatemo.com/tm-498-stimulus
                     <div class="wow fadeInUp color-white service-thumb" data-wow-delay="1.6s">
                          <i class="fa fa-table"></i>
                               <h3>skating</h3>
-                              <p class="color-white">i like skating in my home</p>
+                              <p class="color-white">i like triping in different country</p>
                     </div>
                </div>
 
@@ -186,7 +186,7 @@ http://www.templatemo.com/tm-498-stimulus
                     <div class="wow fadeInUp service-thumb" data-wow-delay="1.8s">
                          <i class="fa fa-html5"></i>
                               <h3>television</h3>
-                              <p>I am intrested in watching tv about cars.</p>
+                              <p>I am intrested in watching WWE.</p>
                     </div>
                </div>
 
@@ -218,7 +218,7 @@ http://www.templatemo.com/tm-498-stimulus
                               </div>
                               <div class="media-body">
                                    <h3 class="media-heading">birth <small>8th jan 2010</small></h3>
-                                   <p class="color-white">I born in calicut in kerla .I am staying in my house which is located in moozhikal  </p>
+                                   <p class="color-white">I born in Neyyattinkara in kerla .I am staying in my house which is located in neyyattinkara  </p>
                               </div>
                          </div>
 
@@ -228,7 +228,7 @@ http://www.templatemo.com/tm-498-stimulus
                               </div>
                               <div class="media-body">
                                    <h3 class="media-heading">schooling <small>st.marys</small></h3>
-                                   <p class="color-white">I studied in st. marys em school which is located at chevarambalam from my class LKG till now</p>
+                                   <p class="color-white">I studied in GHSS Neyyattinkara school which is located at neyyattinkara from my class LKG till +2</p>
                               </div>
                          </div>
 
@@ -238,7 +238,7 @@ http://www.templatemo.com/tm-498-stimulus
                               </div>
                               <div class="media-body">
                                    <h3 class="media-heading">scratch progaming <small>2021 Jun - 2022 Aug</small></h3>
-                                   <p class="color-white">I created scratch of a game catching ball </p>
+                                   <p class="color-white">I created scratch of a game shooting terrorist </p>
                               </div>
                          </div>
 
